--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -116,3 +116,34 @@
     transform: translateY(0);
   }
 }
+
+
+@media (max-width:1024px) {
+  .about-section{
+    padding: 10px;
+  }
+
+  .about-section h3 {
+    font-size: 1.3rem;
+  }
+
+  .about-section p{
+    font-size: 0.8rem;
+  }  
+}
+
+@media (max-width:500px) {
+  .about-section{
+    flex: 1 1 90%;
+  }
+
+  .about-section h3{
+    font-size: 1.8rem;
+  }
+
+  .about-section p{
+    font-size: 1rem;
+  }
+  
+}
+
