--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -37,8 +37,6 @@
   color: #ffffff;
   /* text-shadow: 1px 1px 2px rgb(55, 0, 255), 0 0 1em rgb(0, 81, 255), 0 0 0.2em rgb(0, 17, 255); */
   text-shadow: 1px 1px 2px rgb(0, 12, 147), 0 0 1em rgb(0, 221, 255), 0 0 0.2em rgb(0, 221, 255);
-
-
 }
 
 .about-sections {
@@ -82,6 +80,7 @@
 .about-section:hover p {
   color: #1c526b;
 }
+
 .about-section p {
   font-size: 1rem;
   line-height: 1.6;
@@ -111,15 +110,16 @@
     opacity: 0;
     transform: translateY(20px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
 
-
-@media (max-width:1024px) {
-  .about-section{
+/* Responsive Design */
+@media (max-width: 1024px) and (min-width: 769px) {
+  .about-section {
     padding: 10px;
   }
 
@@ -127,23 +127,30 @@
     font-size: 1.3rem;
   }
 
-  .about-section p{
+  .about-section p {
     font-size: 0.8rem;
-  }  
+  }
 }
 
-@media (max-width:500px) {
-  .about-section{
-    flex: 1 1 90%;
+@media (max-width: 768px) {
+  /* Do nothing for this screen size */
+}
+
+@media (max-width: 500px) {
+  .about-sections {
+    flex-direction: column;
   }
 
-  .about-section h3{
+  .about-section {
+    flex: 1 1 100%;
+    margin-bottom: 20px;
+  }
+
+  .about-section h3 {
     font-size: 1.8rem;
   }
 
-  .about-section p{
+  .about-section p {
     font-size: 1rem;
   }
-  
 }
-
